--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
     <div class="relative h-full flex flex-col items-center justify-center gap-6">
       <a href="join.html" 
          class="bg-green-500 hover:bg-green-600 text-white px-8 py-3 rounded-full text-lg font-semibold shadow-lg transition animate-[float_3s_ease-in-out_infinite]">
-        🤝 Join Us
+        Join Us
       </a>
       <a href="tournament.html" 
          class="border-2 border-green-500 text-green-400 hover:bg-green-500 hover:text-white px-8 py-3 rounded-full text-lg font-semibold shadow-lg transition animate-[float_3.5s_ease-in-out_infinite]">
-        🏆 Tournaments
+        Tournaments
       </a>
     </div>
   </section>
