--- a/join.html
+++ b/join.html
@@ -9,6 +9,10 @@
     body {
       font-family: 'Inter', system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
     }
+    .tab-btn.active {
+      background-color: #22c55e;
+      color: white;
+    }
   </style>
 </head>
 <body class="bg-gray-900 text-white">
@@ -27,40 +31,36 @@
     </div>
   </header>
 
-  <!-- Registration & Login Section -->
+  <!-- ✅ Tabbed Register/Login -->
   <section class="relative min-h-screen flex items-center justify-center bg-gray-900 px-6">
-    <div class="bg-gray-800 shadow-2xl rounded-2xl w-full max-w-4xl p-8 md:p-12 flex flex-col md:flex-row gap-12">
+    <div class="bg-gray-800 shadow-2xl rounded-2xl w-full max-w-md p-8">
 
-      <!-- Registration Form -->
-      <div class="flex-1">
-        <h2 class="text-3xl font-bold text-green-400 mb-6">Register</h2>
-        <form action="#" method="POST" class="space-y-4">
-          <input type="text" placeholder="Full Name" required class="w-full px-4 py-3 rounded-lg bg-gray-900 border border-gray-600 text-white focus:ring-2 focus:ring-green-400">
-          <input type="email" placeholder="Email" required class="w-full px-4 py-3 rounded-lg bg-gray-900 border border-gray-600 text-white focus:ring-2 focus:ring-green-400">
-          <input type="password" placeholder="Password" required class="w-full px-4 py-3 rounded-lg bg-gray-900 border border-gray-600 text-white focus:ring-2 focus:ring-green-400">
-          <button type="submit" class="w-full bg-green-500 hover:bg-green-600 text-white font-semibold py-3 rounded-lg shadow-lg transition">
-            Create Account
-          </button>
-        </form>
+      <!-- Tab Buttons -->
+      <div class="flex mb-6">
+        <button id="registerTab" class="tab-btn flex-1 py-3 rounded-l-lg font-semibold transition">Register</button>
+        <button id="loginTab" class="tab-btn flex-1 py-3 rounded-r-lg font-semibold transition">Login</button>
       </div>
 
-      <!-- Divider -->
-      <div class="hidden md:flex items-center justify-center">
-        <div class="w-px h-64 bg-gray-600"></div>
-      </div>
+      <!-- Register Form -->
+      <form id="registerForm" action="#" method="POST" class="space-y-4">
+        <input type="text" placeholder="Full Name" required class="w-full px-4 py-3 rounded-lg bg-gray-900 border border-gray-600 text-white focus:ring-2 focus:ring-green-400">
+        <input type="email" placeholder="Email" required class="w-full px-4 py-3 rounded-lg bg-gray-900 border border-gray-600 text-white focus:ring-2 focus:ring-green-400">
+        <input type="password" placeholder="Password" required class="w-full px-4 py-3 rounded-lg bg-gray-900 border border-gray-600 text-white focus:ring-2 focus:ring-green-400">
+        <button type="submit" class="w-full bg-green-500 hover:bg-green-600 text-white font-semibold py-3 rounded-lg shadow-lg transition">
+          Create Account
+        </button>
+      </form>
 
       <!-- Login Form -->
-      <div class="flex-1">
-        <h2 class="text-3xl font-bold text-green-400 mb-6">Login</h2>
-        <form action="#" method="POST" class="space-y-4">
-          <input type="email" placeholder="Email" required class="w-full px-4 py-3 rounded-lg bg-gray-900 border border-gray-600 text-white focus:ring-2 focus:ring-green-400">
-          <input type="password" placeholder="Password" required class="w-full px-4 py-3 rounded-lg bg-gray-900 border border-gray-600 text-white focus:ring-2 focus:ring-green-400">
-          <button type="submit" class="w-full bg-green-500 hover:bg-green-600 text-white font-semibold py-3 rounded-lg shadow-lg transition">
-            Login
-          </button>
-        </form>
+      <form id="loginForm" action="#" method="POST" class="space-y-4 hidden">
+        <input type="email" placeholder="Email" required class="w-full px-4 py-3 rounded-lg bg-gray-900 border border-gray-600 text-white focus:ring-2 focus:ring-green-400">
+        <input type="password" placeholder="Password" required class="w-full px-4 py-3 rounded-lg bg-gray-900 border border-gray-600 text-white focus:ring-2 focus:ring-green-400">
+        <button type="submit" class="w-full bg-green-500 hover:bg-green-600 text-white font-semibold py-3 rounded-lg shadow-lg transition">
+          Login
+        </button>
         <p class="text-gray-400 text-sm mt-4">Forgot your password? <a href="#" class="text-green-400 hover:underline">Reset here</a></p>
-      </div>
+      </form>
+
     </div>
   </section>
 
@@ -68,6 +68,34 @@
   <footer class="bg-gray-950 py-6 text-center text-gray-400">
     <p>© 2025 We Are Eleven. All Rights Reserved.</p>
   </footer>
+
+  <!-- ✅ Tab Switch Script -->
+  <script>
+    const registerTab = document.getElementById("registerTab");
+    const loginTab = document.getElementById("loginTab");
+    const registerForm = document.getElementById("registerForm");
+    const loginForm = document.getElementById("loginForm");
+
+    function activateTab(tab) {
+      if (tab === "register") {
+        registerForm.classList.remove("hidden");
+        loginForm.classList.add("hidden");
+        registerTab.classList.add("active");
+        loginTab.classList.remove("active");
+      } else {
+        loginForm.classList.remove("hidden");
+        registerForm.classList.add("hidden");
+        loginTab.classList.add("active");
+        registerTab.classList.remove("active");
+      }
+    }
+
+    // Default → Register tab active
+    activateTab("register");
+
+    registerTab.addEventListener("click", () => activateTab("register"));
+    loginTab.addEventListener("click", () => activateTab("login"));
+  </script>
 
 </body>
 </html>
