--- a/join.html
+++ b/join.html
@@ -69,6 +69,24 @@
     <p>© 2025 We Are Eleven. All Rights Reserved.</p>
   </footer>
 
+      // Your Firebase config
+    const firebaseConfig = {
+      apiKey: "AIzaSyB0DaaYB1hZLY8h23QOpT7Ok4sX5ACkHTM",
+      authDomain: "we-are-eleven.firebaseapp.com",
+      projectId: "we-are-eleven",
+      storageBucket: "we-are-eleven.firebasestorage.app",
+      messagingSenderId: "446706356039",
+      appId: "1:446706356039:web:54cc424f2a8178ae824662",
+      measurementId: "G-CX1LHHXBDQ"
+    };
+
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
+
+    console.log("✅ Firebase initialized:", app);
+  </script>
+
   <!-- ✅ Tab Switch Script -->
   <script>
     const registerTab = document.getElementById("registerTab");
