--- a/join.html
+++ b/join.html
@@ -42,25 +42,26 @@
       </div>
 
       <!-- Register Form -->
-      <form id="registerForm" action="#" method="POST" class="space-y-4">
-        <input type="text" placeholder="Full Name" required class="w-full px-4 py-3 rounded-lg bg-gray-900 border border-gray-600 text-white focus:ring-2 focus:ring-green-400">
-        <input type="email" placeholder="Email" required class="w-full px-4 py-3 rounded-lg bg-gray-900 border border-gray-600 text-white focus:ring-2 focus:ring-green-400">
-        <input type="password" placeholder="Password" required class="w-full px-4 py-3 rounded-lg bg-gray-900 border border-gray-600 text-white focus:ring-2 focus:ring-green-400">
+      <form id="registerForm" class="space-y-4">
+        <input type="text" id="registerName" placeholder="Full Name" required class="w-full px-4 py-3 rounded-lg bg-gray-900 border border-gray-600 text-white focus:ring-2 focus:ring-green-400">
+        <input type="email" id="registerEmail" placeholder="Email" required class="w-full px-4 py-3 rounded-lg bg-gray-900 border border-gray-600 text-white focus:ring-2 focus:ring-green-400">
+        <input type="password" id="registerPassword" placeholder="Password" required class="w-full px-4 py-3 rounded-lg bg-gray-900 border border-gray-600 text-white focus:ring-2 focus:ring-green-400">
         <button type="submit" class="w-full bg-green-500 hover:bg-green-600 text-white font-semibold py-3 rounded-lg shadow-lg transition">
           Create Account
         </button>
       </form>
 
       <!-- Login Form -->
-      <form id="loginForm" action="#" method="POST" class="space-y-4 hidden">
-        <input type="email" placeholder="Email" required class="w-full px-4 py-3 rounded-lg bg-gray-900 border border-gray-600 text-white focus:ring-2 focus:ring-green-400">
-        <input type="password" placeholder="Password" required class="w-full px-4 py-3 rounded-lg bg-gray-900 border border-gray-600 text-white focus:ring-2 focus:ring-green-400">
+      <form id="loginForm" class="space-y-4 hidden">
+        <input type="email" id="loginEmail" placeholder="Email" required class="w-full px-4 py-3 rounded-lg bg-gray-900 border border-gray-600 text-white focus:ring-2 focus:ring-green-400">
+        <input type="password" id="loginPassword" placeholder="Password" required class="w-full px-4 py-3 rounded-lg bg-gray-900 border border-gray-600 text-white focus:ring-2 focus:ring-green-400">
         <button type="submit" class="w-full bg-green-500 hover:bg-green-600 text-white font-semibold py-3 rounded-lg shadow-lg transition">
           Login
         </button>
         <p class="text-gray-400 text-sm mt-4">Forgot your password? <a href="#" class="text-green-400 hover:underline">Reset here</a></p>
       </form>
 
+      <p id="authMessage" class="text-center text-sm mt-4 text-red-400"></p>
     </div>
   </section>
 
@@ -69,7 +70,14 @@
     <p>© 2025 We Are Eleven. All Rights Reserved.</p>
   </footer>
 
-      // Your Firebase config
+  <!-- ✅ Firebase SDKs -->
+  <script type="module">
+    // Import Firebase SDKs
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-analytics.js";
+    import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
+
+    // Your Firebase config
     const firebaseConfig = {
       apiKey: "AIzaSyB0DaaYB1hZLY8h23QOpT7Ok4sX5ACkHTM",
       authDomain: "we-are-eleven.firebaseapp.com",
@@ -83,16 +91,16 @@
     // Initialize Firebase
     const app = initializeApp(firebaseConfig);
     const analytics = getAnalytics(app);
+    const auth = getAuth(app);
 
     console.log("✅ Firebase initialized:", app);
-  </script>
 
-  <!-- ✅ Tab Switch Script -->
-  <script>
+    // Tab Switching
     const registerTab = document.getElementById("registerTab");
     const loginTab = document.getElementById("loginTab");
     const registerForm = document.getElementById("registerForm");
     const loginForm = document.getElementById("loginForm");
+    const authMessage = document.getElementById("authMessage");
 
     function activateTab(tab) {
       if (tab === "register") {
@@ -106,6 +114,7 @@
         loginTab.classList.add("active");
         registerTab.classList.remove("active");
       }
+      authMessage.textContent = "";
     }
 
     // Default → Register tab active
@@ -113,7 +122,42 @@
 
     registerTab.addEventListener("click", () => activateTab("register"));
     loginTab.addEventListener("click", () => activateTab("login"));
-  </script>
 
+    // Register Handler
+    registerForm.addEventListener("submit", async (e) => {
+      e.preventDefault();
+      const email = document.getElementById("registerEmail").value;
+      const password = document.getElementById("registerPassword").value;
+
+      try {
+        await createUserWithEmailAndPassword(auth, email, password);
+        authMessage.textContent = "✅ Registration successful!";
+        authMessage.classList.remove("text-red-400");
+        authMessage.classList.add("text-green-400");
+      } catch (error) {
+        authMessage.textContent = "❌ " + error.message;
+        authMessage.classList.remove("text-green-400");
+        authMessage.classList.add("text-red-400");
+      }
+    });
+
+    // Login Handler
+    loginForm.addEventListener("submit", async (e) => {
+      e.preventDefault();
+      const email = document.getElementById("loginEmail").value;
+      const password = document.getElementById("loginPassword").value;
+
+      try {
+        await signInWithEmailAndPassword(auth, email, password);
+        authMessage.textContent = "✅ Login successful!";
+        authMessage.classList.remove("text-red-400");
+        authMessage.classList.add("text-green-400");
+      } catch (error) {
+        authMessage.textContent = "❌ " + error.message;
+        authMessage.classList.remove("text-green-400");
+        authMessage.classList.add("text-red-400");
+      }
+    });
+  </script>
 </body>
 </html>
