--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       <h1 class="text-2xl font-bold text-green-400">We Are Eleven</h1>
       <nav class="space-x-6">
         <a href="index.html" class="nav-link active" aria-current="page">Home</a>
-        <a href="team_list.html" class="nav-link">Teams</a>
-        <a href="team_fixtures.html" class="nav-link">Fixtures</a>
+        <!-- <a href="team_list.html" class="nav-link">Teams</a>
+        <a href="team_fixtures.html" class="nav-link">Fixtures</a> -->
         <a href="admin.html" class="nav-link">Admin</a>
         <a href="about_us.html" class="nav-link">About Us</a>
       </nav>
