--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <h1 class="text-2xl font-bold text-green-400">We Are Eleven</h1>
       <nav class="space-x-6">
         <a href="index.html" class="nav-link active" aria-current="page">Home</a>
+        <a href="tournament.html" class="nav-link active" aria-current="page">Tournaments</a>
         <!-- <a href="team_list.html" class="nav-link">Teams</a>
         <a href="team_fixtures.html" class="nav-link">Fixtures</a> -->
         <a href="admin.html" class="nav-link">Admin</a>
@@ -41,10 +42,10 @@
          class="bg-green-500 hover:bg-green-600 text-white px-8 py-3 rounded-full text-lg font-semibold shadow-lg transition animate-[float_3s_ease-in-out_infinite]">
         Join Us
       </a>
-      <a href="tournament.html" 
+      <!-- <a href="tournament.html" 
          class="border-2 border-green-500 text-green-400 hover:bg-green-500 hover:text-white px-8 py-3 rounded-full text-lg font-semibold shadow-lg transition animate-[float_3.5s_ease-in-out_infinite]">
         Tournaments
-      </a>
+      </a> -->
     </div>
   </section>
 
