--- a/team_fixtures.html
+++ b/team_fixtures.html
@@ -64,7 +64,7 @@
     <nav aria-label="Primary Navigation" class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <div class="header-inner flex justify-between items-center h-16">
         <a href="index.html" class="brand flex items-center font-extrabold text-xl text-gray-900">
-          <img src="Logo.png" 
+          <img src="We_are_eleven_logo copy.jpg" 
                alt="We Are Eleven Logo" 
                class="h-8 w-8 sm:h-10 sm:w-10 md:h-12 md:w-12 mr-2 rounded-full object-contain" />
           We Are Eleven
@@ -407,4 +407,5 @@
   </script>
 </body>
 </html>
+
 
