--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
   <header class="bg-gray-950 shadow-lg sticky top-0 z-50">
     <div class="container mx-auto flex justify-between items-center p-4">
       <h1 class="text-2xl font-bold text-green-400">We Are Eleven</h1>
+      <img src="We_are_eleven_logo copy.jpg" 
+               alt="We Are Eleven Logo" 
+               class="h-8 w-8 sm:h-10 sm:w-10 md:h-12 md:w-12 mr-2 rounded-full object-contain" />
+          We Are Eleven
+        </a>
       <nav class="space-x-6">
         <a href="index.html" class="nav-link active" aria-current="page">Home</a>
         <a href="tournament.html" class="nav-link active" aria-current="page">Tournaments</a>
