--- a/index.html
+++ b/index.html
@@ -15,15 +15,29 @@
       0%, 100% { transform: translateY(0); }
       50% { transform: translateY(-6px); }
     }
+
+    /* ✅ Watermark Style */
+    body::before {
+      content: "";
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: url("We_are_eleven_logo copy.jpg") no-repeat center center;
+      background-size: 400px;   /* adjust size */
+      opacity: 0.06;           /* make it faint */
+      z-index: -1;             /* keep it behind everything */
+      pointer-events: none;    /* don’t block clicks */
+    }
   </style>
 </head>
 <body class="bg-white text-black">
 
-  <!-- ✅ Fixed Header -->
+  <!-- ✅ Header -->
   <header class="bg-white shadow-lg sticky top-0 z-50">
     <div class="container mx-auto flex justify-between items-center p-4">
-      
-      <!-- ✅ Logo + Text -->
+      <!-- Logo + Text -->
       <div class="flex items-center gap-3">
         <img src="We_are_eleven_logo copy.jpg" 
              alt="We Are Eleven Logo" 
@@ -34,12 +48,10 @@
         </h1>
       </div>
 
-      <!-- ✅ Nav -->
+      <!-- Nav -->
       <nav class="space-x-6">
         <a href="index.html" class="nav-link active text-gray-700 font-medium" aria-current="page">Home</a>
         <a href="tournament.html" class="nav-link text-gray-700 font-medium">Tournaments</a>
-        <!-- <a href="team_list.html" class="nav-link">Teams</a>
-        <a href="team_fixtures.html" class="nav-link">Fixtures</a> -->
         <a href="admin.html" class="nav-link text-gray-700 font-medium">Admin</a>
         <a href="about_us.html" class="nav-link text-gray-700 font-medium">About Us</a>
       </nav>
@@ -47,7 +59,8 @@
   </header>
 
   <!-- ✅ Hero Section -->
-  <section class="relative bg-cover bg-center h-[90vh]" style="background-image: url('https://images.unsplash.com/photo-1600359756538-527414116d9d?ixlib=rb-4.0.3&auto=format&fit=crop&w=1950&q=80');">
+  <section class="relative bg-cover bg-center h-[90vh]" 
+           style="background-image: url('https://images.unsplash.com/photo-1600359756538-527414116d9d?ixlib=rb-4.0.3&auto=format&fit=crop&w=1950&q=80');">
     <div class="absolute inset-0 bg-black/70"></div>
     <div class="relative h-full flex flex-col items-center justify-center gap-6">
       <a href="join.html" 
