--- a/index.html
+++ b/index.html
@@ -67,9 +67,13 @@
     <!-- Watermark + Description + Button -->
     <div class="watermark">
       <img src="We_are_eleven_logo copy.jpg" alt="We Are Eleven Watermark" />
-      <h2 class="text-3xl font-bold mt-6">
-        Welcome to <span class="text-red-600">We Are Eleven</span>
+      
+      <!-- ✅ Welcome Text -->
+      <h2 class="text-3xl font-bold mt-6 text-black">
+        Welcome to <span class="text-black">We Are</span> <span class="text-red-600">Eleven</span>
       </h2>
+  
+      <!-- ✅ Join Button -->
       <a href="join.html" 
          class="mt-6 bg-green-500 hover:bg-green-600 text-white px-8 py-3 rounded-full text-lg font-semibold shadow-lg transition animate-[float_3s_ease-in-out_infinite]">
         Join Us
