--- a/team_list.html
+++ b/team_list.html
@@ -78,11 +78,9 @@
 
   <!-- ✅ Hero Section -->
   <section class="relative h-[40vh] flex flex-col items-center justify-center text-center px-4">
-    <div class="watermark flex flex-col items-center">
-      <h2 class="text-3xl font-bold mt-6 text-black">
-        Independence Cup 2025 - <span class="text-red-600">Team List</span>
-      </h2>
-    </div>
+    <h2 class="text-3xl md:text-4xl font-bold mt-6 text-black">
+      Independence Cup 2025 - Team List
+    </h2>
   </section>
 
   <!-- ✅ Team List Section -->
