--- a/team_list.html
+++ b/team_list.html
@@ -77,9 +77,9 @@
   </header>
 
   <!-- ✅ Hero Section -->
-  <section class="relative h-[40vh] flex flex-col items-center justify-center text-center px-4">
-    <h2 class="text-3xl md:text-4xl font-bold mt-6 text-black">
-      Independence Cup 2025 - Team List
+  <section class="relative py-12 flex flex-col items-center justify-center text-center px-4 bg-gray-50">
+    <h2 class="text-3xl md:text-4xl font-bold text-black">
+      Independence Cup 2025 - <span class="text-red-600">Team List</span>
     </h2>
   </section>
 
