--- a/team_list.html
+++ b/team_list.html
@@ -79,7 +79,7 @@
   <!-- ✅ Hero Section -->
   <section class="relative py-12 flex flex-col items-center justify-center text-center px-4 bg-gray-50">
     <h2 class="text-3xl md:text-4xl font-bold text-black">
-      Independence Cup 2025 - <span class="text-red-600">Team List</span>
+      Independence Cup 2025 - Team List
     </h2>
   </section>
 
